Feature/update application id naming for rest interfaces (#167)
* Adapt naming of the application ID.

* Adapt naming of the application ID.

* Adapt naming of the application ID.

* Adapt naming of the application ID.

* Adapt naming of the application ID.

* Adapt naming of the application ID.

* Adapt naming of the application ID.

* Adapt naming of the application ID.

* Adapt naming of the endpoint ID parameter.

* Update OpenAPI specification.
